--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,23 +1,22 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "Compilar com g++ (MinGW)",
-      "type": "shell",
-      "command": "g++",
-      "args": [
-        "main.cpp",
-        "assets/nave.cpp",
-        "-o",
-        "main.exe",
-        "-lmingw32", 
-        "-lSDL3"
-      ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "problemMatcher": ["$gcc"]
-    }
-  ]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "Compilar com g++ (MinGW)",
+            "type": "shell",
+            "command": "g++",
+            "args": [
+                "main.cpp",
+                "-o",
+                "main.exe",
+                "-lmingw32",
+                "-lSDL3"
+            ],
+            "group": "build",
+            "problemMatcher": [
+                "$gcc"
+            ]
+        }
+        
+    ]
 }
